Create Specs for Endpoint with RSwag Documentation
